Мои друзья.html

--- a/Мои друзья.html
+++ b/Мои друзья.html
@@ -74,6 +74,10 @@
     <div class="friend">
         <img src="Амаля.jpg" alt="Амаля">
         <p>Моя младшая сестренка, ты бы знала, как сильно я тебя люблю! Всем сердцем! Увидимся уже в Германии!</p>
+    </div>
+</body>
+</html>
+
 
 
 
