--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Мы с вами можем писать романы, обсуждать неограниченность мира, господство и дарить другу надежду. Я так сильно вас люблю, дорогая..</p>
     </div>
     <div class="friend">
-        <img src="Женя.jpg" alt="Женя">
+        <img src="женя.jpg" alt="женя">
         <p>Нас связало искусство, а также трепетное чувство друг к другу! Невероятный позитив после каждой встречи и понимания! Спасибо, дорогая!</p>
     </div>
     <div class="friend">
