--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             text-align: center;
             position: relative;
             overflow-y: auto; /* Позволяет вертикальную прокрутку */
+            min-height: 100vh; /* Обеспечивает минимальную высоту страницы */
         }
         h1 {
             color: #4A90E2;
@@ -128,6 +129,8 @@
         <img src="Матвей.jpg" alt="Матвей">
         <p>Самый эмпатичный человек, которого я знаю. Я просто люблю тебя! Спасибо, что всегда рядом и поддерживаешь и веришь в меня!</p>
     </div>
+    
+    <!-- Дополнительный контент для прокрутки -->
+    <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
 </body>
 </html>
-
