--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Арина и её друзья</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Подключаем шрифт -->
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Roboto', sans-serif; /* Современный шрифт */
+            background-color: #f8f8f8; /* Светлый фон */
             margin: 0;
             padding: 20px;
             text-align: center;
             position: relative;
-            overflow-y: auto; /* Позволяет вертикальную прокрутку */
-            min-height: 100vh; /* Обеспечивает минимальную высоту страницы */
+            overflow-y: auto;
+            min-height: 100vh;
         }
         h1 {
-            color: #4A90E2;
+            color: #ff7f50; /* Оранжевый цвет заголовка */
             margin-bottom: 20px;
         }
         .friend {
             margin: 20px 0;
             padding: 20px;
-            background-color: #fff;
+            background-color: #ffffff; /* Белый фон карточки */
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: relative; /* Для анимации */
-            z-index: 1; /* Чтобы элементы не перекрывались */
+            position: relative;
+            z-index: 1;
         }
         img {
             max-width: 100%;
@@ -42,8 +43,8 @@
         .falling-leaf {
             position: absolute;
             z-index: 0;
-            pointer-events: none; /* Чтобы не мешать взаимодействию с другими элементами */
-            opacity: 0; /* Скрываем листы изначально */
+            pointer-events: none;
+            opacity: 0;
         }
 
         @keyframes fall {
@@ -55,6 +56,19 @@
                 transform: translateY(100vh);
                 opacity: 0;
             }
+        }
+
+        /* Стили для осеннего фона */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(to bottom, #ffcc66, #6699ff); /* Градиент от оранжевого к синему */
+            z-index: -1; /* За всеми элементами */
+            opacity: 0.8; /* Непрозрачность фона */
         }
     </style>
 </head>
