--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             min-height: 100vh;
         }
         h1 {
-            color: #00BFFF; /* Голубой цвет заголовка */
+            color: #00008B; /* Темно-синий цвет заголовка */
             margin-bottom: 20px;
             text-transform: uppercase; /* Капсом */
         }
@@ -38,7 +38,7 @@
             width: 150px; /* Размер изображения 150px */
             height: 150px; /* Размер изображения 150px */
             border-radius: 50%; /* Круглая иконка */
-            border: 2px solid #ff9800; /* Оранжевый круглый контур */
+            border: none; /* Убрали обводку вокруг изображения */
             transition: transform 0.2s; /* Плавное изменение трансформации для изображения */
         }
         img:hover {
@@ -76,7 +76,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(to bottom, #ff9800, #2196F3); /* Градиент от оранжевого к синему */
+            background: linear-gradient(to bottom, #ff9800, #00008B); /* Градиент от оранжевого к темно-синему */
             z-index: -1; /* За всеми элементами */
             opacity: 0.8; /* Непрозрачность фона */
         }
