--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="friend">
         <img src="photo_2023-11-03_19-53-30.jpg" alt="Арина">
-        <p>Привет! Это мой первый пробный сайт, тут я просто напишу немного о себе и о моих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце. Про меня думаю все и так знают! Просто хочется немного рассказать вам о каждом моем любимом человеке.</p>
+        <p>Привет! Это мой первый пробный сайт, про себя не буду писать, но напишу немного о своих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце.</p>
     </div>
     <div class="friend">
         <img src="Мэри.jpg" alt="Мэри">
