--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="friend">
         <img src="Даня.jpg" alt="Даня">
-        <p>Что бы не случилось, я очень сильно тебя люблю и всегда буду рядом!</p>
+        <p>Что бы не случилось, я очень тебя ценю!</p>
     </div>
     <div class="friend">
         <img src="Люба.jpg" alt="Люба">
@@ -110,7 +110,23 @@
         <img src="Матвей.jpg" alt="Матвей">
         <p>Самый эмпатичный человек, которого я знаю. Я просто люблю тебя! Спасибо, что всегда рядом и поддерживаешь и веришь в меня!</p>
     </div>
-
+    <div class="friend">
+        <img src="Андрей.jpg" alt="Андрей">
+        <p>В этом человеке может существовать сразу все. Только с тобой можно одновременно обсуждать сложные социальные вопросы и сходить с ума, вытворяя абсолютный бред..</p>
+    </div>
+    <div class="friend">
+        <img src="Ярик.jpg" alt="Ярик">
+        <p>Ты просто мужская версия меня.. Скурпулезность, невероятный эмоциональный интеллект, каждый раз тобой поражаюсь.</p>
+    </div>
+    <div class="friend">
+        <img src="Дед.jpg" alt="Дед">
+        <p>Все думают, что ты злой, а ты крутой мишка! Целую без слов.</p>
+    </div>
+    <div class="friend">
+        <img src="Максимка.jpg" alt="Максимка">
+        <p>Ты до ужаса добрый к любимым людям! Невероятно тебя ценю за это!</p>
+    </div>
+    
     <!-- Дополнительный контент для прокрутки -->
     <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
 </body>
