--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="friend">
         <img src="photo_2023-11-03_19-53-30.jpg" alt="Арина">
-        <p>Привет! Это мой первый пробный сайт, про себя не буду писать, но напишу немного о своих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце.</p>
+        <p>Привет! Это мой первый пробный сайт)о себе не буду писать, но напишу немного о своих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце.</p>
     </div>
     <div class="friend">
         <img src="Мэри.jpg" alt="Мэри">
