--- a/index.html
+++ b/index.html
@@ -72,62 +72,89 @@
     </div>
     <div class="friend">
         <img src="Мэри.jpg" alt="Мэри">
-        <p>Мы не знаем о друг друге все досконально, но с тобой это и не нужно, главное, что мы чувствуем!! Что бы не случилось, и где бы мы не были, я всегда буду с тобой!</p>
+        <p>Мы не знаем о друг друге все досконально, но с тобой это и не нужно, главное, что мы чувствуем!! Что бы не случилось, и где бы мы не были, я всегда буду с тобой! Любимое воспоминание-когда у тебя на ночевке пели песни Queen</p>
     </div>
     <div class="friend">
         <img src="Карина.jpg" alt="Карина">
-        <p>Ты - мой духовный близнец. То, как ты веришь в меня каждый раз поражает, как это вообще возможно? Наши разговоры никто не сможет переплюнуть.. Ценю и люблю тебя до и после смерти!</p>
+        <p>Ты - мой духовный близнец. То, как ты веришь в меня каждый раз поражает, как это вообще возможно? Наши разговоры никто не сможет переплюнуть.. Ценю и люблю тебя до и после смерти!Любимое воспоминание-как у меня дома лежали на полу и обсуждали книги</p>
     </div>
     <div class="friend">
         <img src="Айка.jpg" alt="Айка">
-        <p>Мы с вами можем писать романы, обсуждать неограниченность мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..</p>
+        <p>Мы с вами можем писать романы, обсуждать неограниченность мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..Любимое воспоминание-когда я доводила вас до светофора и мы продолжали разговаривать, пока нам не звонили родители</p>
     </div>
     <div class="friend">
         <img src="Женя.jpg" alt="Женя">
-        <p>Нас связало искусство, а также трепетное чувство друг к другу! Невероятный позитив после каждой встречи и понимание! Спасибо, дорогая!</p>
+        <p>Нас связало искусство, а также трепетное чувство друг к другу! Невероятный позитив после каждой встречи и понимание! Спасибо, дорогая! Любимое воспоминание-когда вы ночевали у меня и мы засыпали под звуки огня ххаах</p>
     </div>
     <div class="friend">
         <img src="Расулинна.jpg" alt="Расулинна">
-        <p>Приятно осознавать, что в мире есть человек, которого ты так хорошо понимаешь, и который так хорошо понимает меня. У тебя всегда есть нужные слова. Ты - самый взрослый человек, которого я знаю.</p>
+        <p>Приятно осознавать, что в мире есть человек, которого ты так хорошо понимаешь, и который так хорошо понимает меня. У тебя всегда есть нужные слова. Ты - самый взрослый человек, которого я знаю. Любимое воспоминание-когда мы лежали у тебя в комнате и читали мангу про маньяка..</p>
     </div>
     <div class="friend">
         <img src="Даша.jpg" alt="Даша">
-        <p>Отношусь к тебе, как к своей родной сестре..Очень внимательная, добрая, и просто солнечная.</p>
+        <p>Отношусь к тебе, как к своей родной сестре..Очень внимательная, добрая, и просто солнечная. Любимое воспоминание-когда работали у бабули в саду</p>
     </div>
     <div class="friend">
         <img src="Даня.jpg" alt="Даня">
-        <p>Что бы не случилось, я очень тебя ценю!</p>
+        <p>Что бы не случилось, я очень тебя ценю! Любимое воспоминание-перерыли всю Петроградку и наелись буррито</p>
     </div>
     <div class="friend">
         <img src="Люба.jpg" alt="Люба">
-        <p>Люба, мы очень похожи и одновременно очень разные. Я люблю тебя всем сердцем и каждый раз хочу увидеть тебя! Хочу, чтобы мы жили в одном доме в Италии и ходили на парные свидания с самыми горячими парнями!!</p>
+        <p>Люба, мы очень похожи и одновременно очень разные. Я люблю тебя всем сердцем и каждый раз хочу увидеть тебя! Хочу, чтобы мы жили в одном доме в Италии и ходили на парные свидания с самыми горячими парнями!!Любимое воспоминание-когда ты приехала в Питер и подарила мне лучший картхолдер в мире</p>
     </div>
     <div class="friend">
         <img src="Амаля.jpg" alt="Амаля">
-        <p>Моя младшая сестренка, ты бы знала, как сильно я тебя люблю! Всем сердцем! Увидимся уже в Германии!</p>
+        <p>Моя младшая сестренка, ты бы знала, как сильно я тебя люблю! Всем сердцем! Увидимся уже в Германии!Любимое воспоминание-наше прошлое лето с мамами</p>
     </div>
     <div class="friend">
         <img src="Матвей.jpg" alt="Матвей">
-        <p>Самый эмпатичный человек, которого я знаю. Я просто люблю тебя! Спасибо, что всегда рядом и поддерживаешь и веришь в меня!</p>
+        <p>Самый эмпатичный человек, которого я знаю. Я просто люблю тебя! Спасибо, что всегда рядом и поддерживаешь и веришь в меня!Любимое воспоминание-их слишком много....</p>
     </div>
     <div class="friend">
         <img src="Андрей.jpg" alt="Андрей">
-        <p>В этом человеке может существовать сразу все. Только с тобой можно одновременно обсуждать сложные социальные вопросы и сходить с ума, вытворяя абсолютный бред..</p>
+        <p>В этом человеке может существовать сразу все. Только с тобой можно одновременно обсуждать сложные социальные вопросы и сходить с ума, вытворяя абсолютный бред..Любимое воспоминание-наш разговор на пляжу в Зеленоградске</p>
     </div>
     <div class="friend">
         <img src="Ярик.jpg" alt="Ярик">
-        <p>Ты просто мужская версия меня.. Скурпулезность, невероятный эмоциональный интеллект, каждый раз тобой поражаюсь.</p>
+        <p>Ты просто мужская версия меня.. Скурпулезность, невероятный эмоциональный интеллект, каждый раз тобой поражаюсь. Любимое воспоминание-готовили кофе в Карелии</p>
     </div>
     <div class="friend">
         <img src="Дед.jpg" alt="Дед">
-        <p>Все думают, что ты злой, а ты крутой мишка! Целую без слов.</p>
+        <p>Все думают, что ты злой, а ты крутой мишка! Целую без слов.Любимое воспоминание-наш разговор на термальных источниках</p>
     </div>
     <div class="friend">
         <img src="Максимка.jpg" alt="Максимка">
-        <p>Ты до ужаса добрый к любимым людям! Невероятно тебя ценю за это!</p>
+        <p>Ты до ужаса добрый к любимым людям! Невероятно тебя ценю за это!Любимое воспоминание-наша игра в шахматы у меня дома</p>
     </div>
-    
-    <!-- Дополнительный контент для прокрутки -->
+    <div class="friend">
+        <img src="Соня.jpg" alt="Соня">
+        <p>При всей твоей дисциплине и трудоголизме, ты совмещаешь в себе черту нежности и искренней доброты.. я считаю, что только лучшие люди обожают лошадей :P Любимое воспоминание - когда мы сидели в аэропорту в первый раз.</p>
+    </div>
+    <div class="friend">
+        <img src="Арина_Лиза.jpg" alt="Арина и Лиза">
+        <p>Девочки, я вас очень люблю. Каждый день с вами ощущается как жизнь с лучшими сестрами на свете! Любимое воспоминание - как мы жарили зефир на свечке!</p>
+    </div>
+    <div class="friend">
+        <img src="Олег.jpg" alt="Олег">
+        <p>Бусь, ну ты объективно самый лучший - моя продуктивная икона. Любимое воспоминание - когда ты пришел в серф со своими лучами поддержки, во время моей подготовки к сессии.</p>
+    </div>
+    <div class="friend">
+        <img src="Даша_Дедова.jpg" alt="Даша Дедова">
+        <p>Ты, наверное, первый человек, который так явно мной восхитился, тем самым давая мне реальное обоснование поверить в свои таланты. Любимое воспоминание - когда мы на полу в общежитии играли на инстру
+     </div>
+    <div class="friend">
+        <img src="Инга.jpg" alt="Инга">
+        <p>равда, из всех смехов твой самый любимый. Любимое воспоминание-когда мы пропустили электричку и чуть не умерли от смеха, и в конце нас чуть не сдул нафиг ветер.</p>
+    </div>
+    <div class="friend">
+        <img src="ДаняМ.jpg" alt="ДаняМ">
+        <p>Ты даже не представляешь, как сильно я тебя ценю! Любимое воспоминание - на первом вечере курса факультета молекулярной биологии.</p>
+    </div>
+    <div class="friend">
+        <img src="Лера.jpg" alt="Лера">
+        <p>Я считаю, что мы прожили целую огромную жизнь, и продолжаем ее проживать вместе, за что я невероятно благодарна.. Любимое воспоминание-игра на хардкоре в АРКе..это было слишком грандиозно, я даже написал книгу по этой игре.</p>
+    </div>
+   
     <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
 </body>
 </html>
