--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
         <img src="Лера.jpg" alt="Лера">
         <p>Я считаю, что мы прожили целую огромную жизнь, и продолжаем ее проживать вместе, за что я невероятно благодарна.. Любимое воспоминание-игра на хардкоре в АРКе..это было слишком грандиозно, я даже написал книгу по этой игре.</p>
     </div>
+    <div class="friend">
+        <img src="Ира.jpg" alt="Ира">
+        <p>Самая хорни-икона, по совместительству богиня и очень целеустремленная малышка! Любимое воспоминание-наш разговор в Серфе на Петроградской..Было очень много важного сказано! А также у тебя был невероятно ослепительный белый аутфит аххапх</p>
+    </div>
    
     <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
 </body>
