--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     <div class="friend">
         <img src="Ира.jpg" alt="Ира">
-        <p>Самая хорни-икона, по совместительству богиня и очень целеустремленная малышка! Любимое воспоминание-наш разговор в Серфе на Петроградской..Было очень много важного сказано! А также у тебя был невероятно ослепительный белый аутфит аххапх</p>
+        <p>Самая хорни-икона, по совместительству богиня и очень целеустремленная малышка! Любимое воспоминание-когда ты накормила, утешила, залюбила меня Теосом во время сессии</p>
     </div>
    
     <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
