--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="friend">
         <img src="Айка.jpg" alt="Айка">
-        <p>Мы с вами можем писать романы, обсуждать неограниченность мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..Любимое воспоминание-когда я доводила вас до светофора и мы продолжали разговаривать, пока нам не звонили родители</p>
+        <p>Мы с вами можем писать романы, обсуждать неограниченность мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..Любимое воспоминание-когда я доводила вас до светофора и мы продолжали разговаривать до тех пор, пока нас не начинали искать родители</p>
     </div>
     <div class="friend">
         <img src="Женя.jpg" alt="Женя">
