--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     <div class="friend">
         <img src="Андрей.jpg" alt="Андрей">
-        <p>В этом человеке может существовать сразу все. Только с тобой можно одновременно обсуждать сложные социальные вопросы и сходить с ума, вытворяя абсолютный бред..Любимое воспоминание-наш разговор на пляжу в Зеленоградске</p>
+        <p>В этом человеке может существовать сразу все. Только с тобой можно одновременно обсуждать сложные социальные вопросы и сходить с ума, вытворяя абсолютный бред..Любимое воспоминание-наш разговор на пляже в Зеленоградске</p>
     </div>
     <div class="friend">
         <img src="Ярик.jpg" alt="Ярик">
