--- a/index.html
+++ b/index.html
@@ -60,6 +60,41 @@
             background: linear-gradient(to bottom, #ff9800, #00008B); /* Градиент от оранжевого к темно-синему */
             z-index: -1; /* За всеми элементами */
             opacity: 0.8; /* Непрозрачность фона */
+        } 
+            /* Анимация падающих звезд */
+        .falling-star {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background-color: white;
+            box-shadow: 0 0 10px white, 0 0 20px white;
+            border-radius: 50%;
+            animation: fall 5s linear infinite;
+        }
+
+        @keyframes fall {
+            0% {
+                top: -10%;
+                left: calc(50% + 200px);
+                opacity: 1;
+                transform: translateX(0) translateY(0);
+            }
+            100% {
+                top: 100%;
+                left: calc(50% - 200px);
+                opacity: 0;
+                transform: translateX(-200px) translateY(100vh);
+            }
+        }
+
+        /* Анимация для звезд */
+        .falling-star:nth-child(2) {
+            animation-delay: 2s;
+            animation-duration: 4s;
+        }
+        .falling-star:nth-child(3) {
+            animation-delay: 3s;
+            animation-duration: 6s;
         }
     </style>
 </head>
