--- a/index.html
+++ b/index.html
@@ -195,6 +195,14 @@
         <img src="Ира.jpg" alt="Ира">
         <p>Самая хорни-икона, по совместительству богиня и очень целеустремленная малышка! Любимое воспоминание-когда ты накормила, утешила, залюбила меня Теосом во время сессии</p>
     </div>
+    <div class="friend">
+        <img src="Тимур.jpg" alt="Тимур">
+        <p>Мой самый забавный джазовый друг, который понимает эти все музыкальные приколы в нашей медицинской тусовке. Любимое воспоминание-когда мы вместе играли на пианино импровизируемый джазик</p>
+    </div>
+    <div class="friend">
+        <img src="Настя.jpg" alt="Настя">
+        <p>Загадочная, однако невероятно интересная и интригующая персона. Любимое воспоминание-прогулка до Василеостровского рынка</p>
+    </div>
    
     <div style="height: 1500px;"></div> <!-- Добавляем пустой элемент для прокрутки -->
 </body>
