--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <div class="friend">
         <img src="photo_2023-11-03_19-53-30.jpg" alt="Арина">
-        <p>Привет! Это мой первый пробный сайт)о себе не буду писать, но напишу немного о своих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце.</p>
+        <p>Привет! Это мой первый пробный сайт) о себе не буду писать, но напишу немного о своих друзьях! Они все невероятные люди и занимают отдельное место в моем сердце.</p>
     </div>
     <div class="friend">
         <img src="Мэри.jpg" alt="Мэри">
@@ -117,7 +117,7 @@
     </div>
     <div class="friend">
         <img src="Айка.jpg" alt="Айка">
-        <p>Мы с вами можем писать романы, обсуждать неограниченность мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..Любимое воспоминание-когда я доводила вас до светофора и мы продолжали разговаривать до тех пор, пока нас не начинали искать родители</p>
+        <p>Мы с вами можем писать романы, обсуждать этот странный местами и одновременно великолепный мира, поддерживать и дарить друг другу надежду. Я так сильно вас люблю, дорогая..Любимое воспоминание-когда я доводила вас до светофора и мы продолжали разговаривать до тех пор, пока нас не начинали искать родители</p>
     </div>
     <div class="friend">
         <img src="Женя.jpg" alt="Женя">
@@ -129,7 +129,7 @@
     </div>
     <div class="friend">
         <img src="Даша.jpg" alt="Даша">
-        <p>Отношусь к тебе, как к своей родной сестре..Очень внимательная, добрая, и просто солнечная. Любимое воспоминание-когда работали у бабули в саду</p>
+        <p>Отношусь к тебе, как к своей родной сестре..Никогда бы не подумала, что смогу иметь семью, не обремененную общей генетикой, однако сейчас понимаю, что могу :) Очень внимательная ко мне и своим близким, добрая, и просто солнечная. Любимое воспоминание-когда работали у бабули в саду</p>
     </div>
     <div class="friend">
         <img src="Даня.jpg" alt="Даня">
@@ -177,15 +177,15 @@
     </div>
     <div class="friend">
         <img src="Даша_Дедова.jpg" alt="Даша Дедова">
-        <p>Ты, наверное, первый человек, который так явно мной восхитился, тем самым давая мне реальное обоснование поверить в свои таланты. Любимое воспоминание - когда мы на полу в общежитии играли на инстру
-     </div>
+        <p>Ты, наверное, первый человек, который так явно мной восхитился, тем самым давая мне реальное обоснование поверить в свои таланты. Любимое воспоминание - когда мы на полу в общежитии играли на гитаре и моем мини-пианино</p>
+    </div>
     <div class="friend">
         <img src="Инга.jpg" alt="Инга">
-        <p>равда, из всех смехов твой самый любимый. Любимое воспоминание-когда мы пропустили электричку и чуть не умерли от смеха, и в конце нас чуть не сдул нафиг ветер.</p>
+        <p>Правда, из всех смехов твой-мой самый любимый. Любимое воспоминание-когда мы пропустили электричку и чуть не умерли от смеха, и в конце нас чуть не сдул нафиг ветер.</p>
     </div>
     <div class="friend">
         <img src="ДаняМ.jpg" alt="ДаняМ">
-        <p>Ты даже не представляешь, как сильно я тебя ценю! Любимое воспоминание - на первом вечере курса факультета молекулярной биологии.</p>
+        <p>Ты даже не представляешь, как сильно я тебя ценю! Любимое воспоминание - наши бесконечные встречи на кухне.</p>
     </div>
     <div class="friend">
         <img src="Лера.jpg" alt="Лера">
