--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
     <div class="friend">
         <img src="Расулинна.jpg" alt="Расулинна">
-        <p>Приятно осознавать, что в мире есть человек, которого ты так хорошо понимаешь, и который так хорошо понимает меня. У тебя всегда есть нужные слова. Ты - самый взрослый человек, которого я знаю. Любимое воспоминание-когда мы лежали у тебя в комнате и читали мангу про маньяка..</p>
+        <p>Приятно осознавать, что в мире есть человек, которого ты так хорошо понимаешь, и который так хорошо понимает тебя. У тебя всегда есть нужные слова. Ты - самый взрослый человек, которого я знаю. Любимое воспоминание-когда мы лежали у тебя в комнате и читали мангу про маньяка..</p>
     </div>
     <div class="friend">
         <img src="Даша.jpg" alt="Даша">
